<resources>
    <string name="app_name">나만의 비서</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="start_to_arrive">%s -> %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_nickname">닉네임을 입력하세요</string>
    <string name="no_alarm">현재 설정된 알람은 없습니다.</string>
    <string name="enter_change_nickname">변경할 닉네임을 입력해주세요</string>
    <string name="change_nickname">닉네임 변경하기</string>
    <string name="save_changes">변경사항 저장</string>
    <string name="info_nickname_characters">4~11글자까지 허용합니다.</string>
    <string name="info_nickname_form">닉네임은 숫자, 영문, -(하이픈)과 _(언더바)만 사용 가능합니다.</string>
    <string name="no_spaces">공백이 들어갈 수 없습니다.</string>

    <string name="specify_time">추억의 시간을 지정해주세요</string>
    <string name="enter_todo_title">추억의 이름을 정해주세요</string>
    <string name="enter_start_place">출발 장소를 입력해주세요</string>
    <string name="enter_arrive_place">도착 장소를 입력해주세요</string>
    <string name="click_transportation">이동수단을 클릭해주세요.</string>

    <string name="friend_list">친구 목록</string>
    <string name="alert_friend_request">새로운 친구요청이 있습니다!</string>

    <string name="start">시작하기</string>

    <string name="sign_in">로그인</string>
    <string name="email_address">이메일 주소</string>
    <string name="password">비밀번호</string>
    <string name="sign_up">가입하기</string>
    <string name="do_you_forget_password">비밀번호를 잊으셨나요?</string>

    <string name="hello_sir">님 안녕하세요!</string>

    <string name="first_round">1단계</string>
    <string name="enter_email_and_password">이메일과 비밀번호를 입력해주세요 :)</string>
    <string name="info_log_in_later">나중에 로그인할 때 필요합니다 기억해주세요!</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="not_same_password">비밀번호가 일치하지 않습니다!</string>
    <string name="verify_email">이메일 본인 인증</string>
    <string name="info_first_round">1단계에서 입력한 이메일로 인증메일이 발송됩니다.\n확인 후 다음단계로 넘어가주세요"</string>
    <string name="check_verify_email">인증 확인</string>
    <string name="create_user">사용자 생성</string>

    <string name="day_of_memories">Day of Memories</string>
    <string name="friend_to_share">추억을 공유할 친구</string>
    <string name="set_alarm">알람 설정</string>
    <string name="enter_start_date">추억의 시작 날짜를 정해주세요</string>
    <string name="enter_arrival_date">추억의 종료 날짜를 정해주세요</string>
    <string name="default_time">00:00</string>
    <string name="diary">일기장</string>
    <string name="enter_diary_content">추억을 자세히 기록해봐요</string>
    <string name="set_today">오늘 날짜 적용</string>
    <string name="ok">확인</string>

    <string name="place_of_memories">추억의 장소</string>
    <string name="empty_place_of_memories">추억의 장소가 없어요.\n 추억의 일정의 별을 눌러서 추가하세요.</string>

    <string name="empty_todo">추억이 아직 없어요.\n새로운 추억을 만들어주세요!</string>
    
    <string name="schedule">일정</string>
    <string name="check_today_schedule">오늘의 일정을 확인하세요</string>
    
    <string name="places_of_my_daily_life">나의 일상이 담긴 곳</string>

    <string name="enter_friend_nickname">친구의 닉네임을 입력해주세요</string>
    <string name="hello">안녕하세요!</string>
    <string name="place">장소</string>
    <string name="road_name_place">도로명 주소</string>

    <string name="share">공유</string>

    <string name="accept">수락</string>
    <string name="decline">거절</string>
    <string name="cancel">취소</string>
    <string name="follow">팔로우</string>

    <string name="enter_place">주소를 입력해주세요</string>

    <string name="tag">태그하기</string>
    <string name="no_friend">검색된 친구가 없습니다.</string>
    <string name="shared_friend">추억을 공유한 친구들</string>
</resources>